--- a/index.html
+++ b/index.html
@@ -18,8 +18,101 @@
   </head>
   <body>
     <div class="page">
-      <header class="header"></header>
-      <main class="content"></main>
+      <header class="header">
+        <img class="header__logo" src="./images/logo.svg" alt="spots logo" />
+      </header>
+      <main class="content">
+        <section class="profile page__section">
+          <img
+            src="./images/avatar.jpg"
+            alt="Bessie Coleman"
+            class="profile__avatar"
+          />
+          <div class="profile__column">
+            <h1 class="profile__name">Bessie Coleman</h1>
+            <p class="profile__description">Civil Aviator</p>
+            <button type="button" class="profile__edit-button">
+              <img src="./images/pencil.svg" alt="edit icon" />Edit Profile
+            </button>
+          </div>
+          <button type="button" class="profile__add-button">
+            <img src="./images/plus.svg" alt="add icon" />New Post
+          </button>
+        </section>
+        <section class="cards page__section">
+          <ul class="cards__list">
+            <li class="card">
+              <img
+                src="./images/Val Thorens.jpg"
+                alt="Val Thorens"
+                class="card__image"
+              />
+              <div class="card__content">
+                <h2 class="card__title">Val Thorens</h2>
+                <button type="button" class="card__like-button"></button>
+              </div>
+            </li>
+            <li class="card">
+              <img
+                src="./images/restaurant.jpg"
+                alt="Restaurant"
+                class="card__image"
+              />
+              <div class="card__content">
+                <h2 class="card__title">Restaurant terrace</h2>
+                <button type="button" class="card__like-button"></button>
+              </div>
+            </li>
+            <li class="card">
+              <img
+                src="./images/cafe.jpg"
+                alt="outdoor cafe"
+                class="card__image"
+              />
+              <div class="card__content">
+                <h2 class="card__title">An outdoor cafe</h2>
+                <button type="button" class="card__like-button"></button>
+              </div>
+            </li>
+            <li class="card">
+              <img
+                src="./images/bridge.jpg"
+                alt="bridge over a valley"
+                class="card__image"
+              />
+              <div class="card__content">
+                <h2 class="card__title">A very long bridge, over the forest</h2>
+                <button type="button" class="card__like-button"></button>
+              </div>
+            </li>
+            <li class="card">
+              <img
+                src="./images/tunnel.jpg"
+                alt="Tunnel with windows"
+                class="card__image"
+              />
+              <div class="card__content">
+                <h2 class="card__title">Tunnel with morning light</h2>
+                <button type="button" class="card__like-button"></button>
+              </div>
+            </li>
+            <li class="card">
+              <img
+                src="./images/cabin.jpg"
+                alt="Snow covered cabin"
+                class="card__image"
+              />
+              <div class="card__content">
+                <h2 class="card__title">Mountain house</h2>
+                <button type="button" class="card__like-button"></button>
+              </div>
+            </li>
+          </ul>
+        </section>
+      </main>
+      <footer class="footer page__section">
+        <p>2023 &copy Spots</p>
+      </footer>
     </div>
   </body>
 </html>
