created responsive design for mobile & personalized page

--- a/index.html
+++ b/index.html
@@ -24,13 +24,15 @@
       <main class="content">
         <section class="profile page__section">
           <img
-            src="./images/avatar.jpg"
+            src="./images/profile.jpg"
             alt="Bessie Coleman"
             class="profile__avatar"
           />
           <div class="profile__column">
-            <h1 class="profile__name">Bessie Coleman</h1>
-            <p class="profile__description">Civil Aviator</p>
+            <h1 class="profile__name">Jared Ware</h1>
+            <p class="profile__description">
+              Aspiring Software Engineer and part-time YouTube content creator
+            </p>
             <button type="button" class="profile__edit-button">
               <img src="./images/pencil.svg" alt="edit icon" />Edit Profile
             </button>
@@ -43,67 +45,67 @@
           <ul class="cards__list">
             <li class="card">
               <img
-                src="./images/Val Thorens.jpg"
-                alt="Val Thorens"
+                src="./images/training.jpg"
+                alt="Infantry Squad"
                 class="card__image"
               />
               <div class="card__content">
-                <h2 class="card__title">Val Thorens</h2>
+                <h2 class="card__title">Training with the boys</h2>
                 <button type="button" class="card__like-button"></button>
               </div>
             </li>
             <li class="card">
               <img
-                src="./images/restaurant.jpg"
-                alt="Restaurant"
+                src="./images/wesley.jpg"
+                alt="Handsome dog on a bed"
                 class="card__image"
               />
               <div class="card__content">
-                <h2 class="card__title">Restaurant terrace</h2>
+                <h2 class="card__title">Best Bud</h2>
                 <button type="button" class="card__like-button"></button>
               </div>
             </li>
             <li class="card">
               <img
-                src="./images/cafe.jpg"
-                alt="outdoor cafe"
+                src="./images/deskview.JPG"
+                alt="desk work space"
                 class="card__image"
               />
               <div class="card__content">
-                <h2 class="card__title">An outdoor cafe</h2>
+                <h2 class="card__title">Newest Passion</h2>
                 <button type="button" class="card__like-button"></button>
               </div>
             </li>
             <li class="card">
               <img
-                src="./images/bridge.jpg"
-                alt="bridge over a valley"
+                src="./images/flyin.jpg"
+                alt="Motorcycle riding down the road"
                 class="card__image"
               />
               <div class="card__content">
-                <h2 class="card__title">A very long bridge, over the forest</h2>
+                <h2 class="card__title">Living in the fast lane</h2>
                 <button type="button" class="card__like-button"></button>
               </div>
             </li>
             <li class="card">
               <img
-                src="./images/tunnel.jpg"
-                alt="Tunnel with windows"
+                src="./images/annie.jpg"
+                alt="Dog jumping into a pool"
                 class="card__image"
               />
               <div class="card__content">
-                <h2 class="card__title">Tunnel with morning light</h2>
+                <h2 class="card__title">Life requires a leap of courage</h2>
                 <button type="button" class="card__like-button"></button>
               </div>
             </li>
             <li class="card">
               <img
-                src="./images/cabin.jpg"
-                alt="Snow covered cabin"
+                src="./images/machine.JPG"
+                alt="inside view of a computer"
                 class="card__image"
               />
               <div class="card__content">
-                <h2 class="card__title">Mountain house</h2>
+                <h2 class="card__title">My first build</h2>
                 <button type="button" class="card__like-button"></button>
               </div>
             </li>
@@ -111,7 +113,7 @@
         </section>
       </main>
       <footer class="footer page__section">
-        <p>2023 &copy Spots</p>
+        <p class="footer__copyright">2023 &copy Spots</p>
       </footer>
     </div>
   </body>
