--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         </section>
       </main>
       <footer class="footer page__section">
-        <p class="footer__copyright">2023 &copy Spots</p>
+        <p class="footer__copyright">2023 &copy; Spots</p>
       </footer>
     </div>
   </body>
