--- a/index.html
+++ b/index.html
@@ -116,5 +116,6 @@
         <p class="footer__copyright">2023 &copy; Spots</p>
       </footer>
     </div>
+    <script defer src="./scripts/index.js"></script>
   </body>
 </html>
