--- a/index.html
+++ b/index.html
@@ -43,6 +43,15 @@
         </section>
         <section class="cards page__section">
           <ul class="cards__list">
+            <template id="card-template">
+              <li class="card">
+                <img src="" alt="" class="card__image" />
+                <div class="card__content">
+                  <h2 class="card__title"></h2>
+                  <button type="button" class="card__like-button"></button>
+                </div>
+              </li>
+            </template>
             <li class="card">
               <img
                 src="./images/training.jpg"
@@ -115,37 +124,35 @@
       <footer class="footer page__section">
         <p class="footer__copyright">2023 &copy; Spots</p>
       </footer>
+      <!--Pop-up Edit Profile Modal-->
       <div class="modal" id="edit-profile-modal">
         <div class="modal__container">
-          <button
-            type="submit"
-            class="modal__close-btn"
-            id="modal-close-button"
-          ></button>
+          <button type="submit" class="modal__close-button"></button>
           <h2 class="modal__title">Edit Profile</h2>
           <form name="edit-profile" class="modal__form">
-            <label for="name" class="modal__label">
+            <label for="profile-name-input" class="modal__label">
               Name
               <input
-                id="name"
+                id="profile-name-input"
                 type="text"
                 class="modal__input"
                 placeholder="Type your name"
               />
             </label>
-            <label for="description" class="modal__label">
+            <label for="profile-description-input" class="modal__label">
               Decription
               <input
-                id="description"
+                id="profile-description-input"
                 type="text"
                 class="modal__input"
                 placeholder="Describe yourself"
               />
             </label>
-            <button type="submit" class="modal__submit-btn">Save</button>
+            <button type="submit" class="modal__submit-button">Save</button>
           </form>
         </div>
       </div>
+      <!--End Pop-up Edit Profile Modal-->
     </div>
     <script defer src="./scripts/index.js"></script>
   </body>
