--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
             <template id="card-template">
               <li class="card">
                 <img src="" alt="" class="card__image" />
+                <button type="button" class="card__delete-button"></button>
                 <div class="card__content">
                   <h2 class="card__title"></h2>
                   <button type="button" class="card__like-button"></button>
@@ -87,6 +88,50 @@
         </div>
       </div>
       <!--End Pop-up Edit Profile Modal-->
+      <!--Pop-up New Post Modal-->
+      <div class="modal" id="new-post-modal">
+        <div class="modal__container">
+          <button type="submit" class="modal__close-button"></button>
+          <h2 class="modal__title">New Post</h2>
+          <form name="new-post" class="modal__form">
+            <label for="image-link-input" class="modal__label">
+              Image Link
+              <input
+                id="image-link-input"
+                type="url"
+                name="link"
+                class="modal__input"
+                placeholder="Past a link to the picture"
+              />
+            </label>
+            <label for="caption-input" class="modal__label">
+              Caption
+              <input
+                id="caption-input"
+                type="text"
+                name="caption"
+                class="modal__input"
+                placeholder="Type your caption"
+              />
+            </label>
+            <button type="submit" class="modal__submit-button">Save</button>
+          </form>
+        </div>
+      </div>
+      <!--End Pop-up New Post Modal-->
+      <!--Pop up Preview Modal-->
+      <div class="modal" id="preview-modal">
+        <div class="modal__container modal__container_type_preview">
+          <img class="modal__image" src="" alt="" />
+          <button
+            aria-label="Close modal"
+            class="modal__close-button modal__close-button_type_preview"
+            type="button"
+          ></button>
+          <p class="modal__caption"></p>
+        </div>
+      </div>
+      <!--End Pop up Preview Modal-->
     </div>
     <script defer src="./scripts/index.js"></script>
   </body>
