--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div class="modal__container">
           <button type="submit" class="modal__close-button"></button>
           <h2 class="modal__title">Edit Profile</h2>
-          <form name="edit-profile" class="modal__form">
+          <form name="edit-profile" class="modal__form" novalidate>
             <label for="profile-name-input" class="modal__label">
               Name
               <input
@@ -72,7 +72,14 @@
                 type="text"
                 class="modal__input"
                 placeholder="Type your name"
+                minlength="2"
+                maxlength="40"
+                required
               />
+              <span
+                id="profile-name-input-error"
+                class="modal__error modal__error_inactive"
+              ></span>
             </label>
             <label for="profile-description-input" class="modal__label">
               Decription
@@ -81,7 +88,14 @@
                 type="text"
                 class="modal__input"
                 placeholder="Describe yourself"
+                minlength="2"
+                maxlength="200"
+                required
               />
+              <span
+                id="profile-description-input-error"
+                class="modal__error modal__error_inactive"
+              ></span>
             </label>
             <button type="submit" class="modal__submit-button">Save</button>
           </form>
@@ -93,7 +107,7 @@
         <div class="modal__container">
           <button type="submit" class="modal__close-button"></button>
           <h2 class="modal__title">New Post</h2>
-          <form name="new-post" class="modal__form">
+          <form name="new-post" class="modal__form" novalidate>
             <label for="image-link-input" class="modal__label">
               Image Link
               <input
@@ -102,7 +116,12 @@
                 name="link"
                 class="modal__input"
                 placeholder="Past a link to the picture"
+                required
               />
+              <span
+                id="image-link-input-error"
+                class="modal__error modal__error_inactive"
+              ></span>
             </label>
             <label for="caption-input" class="modal__label">
               Caption
@@ -112,7 +131,14 @@
                 name="caption"
                 class="modal__input"
                 placeholder="Type your caption"
+                minlength="2"
+                maxlength="30"
+                required
               />
+              <span
+                id="caption-input-error"
+                class="modal__error modal__error_inactive"
+              ></span>
             </label>
             <button type="submit" class="modal__submit-button">Save</button>
           </form>
@@ -134,5 +160,6 @@
       <!--End Pop up Preview Modal-->
     </div>
     <script defer src="./scripts/index.js"></script>
+    <script defer src="./scripts/validation.js"></script>
   </body>
 </html>
