--- a/src/index.html
+++ b/src/index.html
@@ -12,20 +12,23 @@
       name="keywords"
       content="HTML, CSS, social, media, photo, share, user, interactive"
     />
-    <link rel="stylesheet" href="./pages/index.css" />
-    <link rel="shortcut icon" href="favicon.ico" />
+
     <title>Spots</title>
   </head>
   <body>
     <div class="page">
       <header class="header">
-        <img class="header__logo" src="./images/logo.svg" alt="spots logo" />
+        <img
+          class="header__logo"
+          src="<%=require('./images/logo.svg')%>"
+          alt="spots logo"
+        />
       </header>
       <main class="content">
         <section class="profile page__section">
           <img
-            src="./images/profile.jpg"
-            alt="Bessie Coleman"
+            src="<%=require('./images/profile.jpg')%>"
+            alt="Jared Ware"
             class="profile__avatar"
           />
           <div class="profile__column">
@@ -34,11 +37,15 @@
               Aspiring Software Engineer and part-time YouTube content creator
             </p>
             <button type="button" class="profile__edit-button">
-              <img src="./images/pencil.svg" alt="edit icon" />Edit Profile
+              <img
+                src="<%=require('./images/pencil.svg')%>"
+                alt="edit icon"
+              />Edit Profile
             </button>
           </div>
           <button type="button" class="profile__add-button">
-            <img src="./images/plus.svg" alt="add icon" />New Post
+            <img src="<%=require('./images/plus.svg')%>" alt="add icon" />New
+            Post
           </button>
         </section>
         <section class="cards page__section">
@@ -159,7 +166,5 @@
       </div>
       <!--End Pop up Preview Modal-->
     </div>
-    <script defer src="./scripts/index.js"></script>
-    <script defer src="./scripts/validation.js"></script>
   </body>
 </html>
